# Tetris

Tetris/: CMakeLists.txt  main.cpp
Tetris/DP/: observable.cpp  observable.h  observer.h
Tetris/controller/: Controller.cpp  Controller.h
Tetris/model/headers/: Bag.h  Board.h  Game.h  Level.h  Matrix.h  Movement.h  Piece.h  TetrisFacade.h
Tetris/model/sources/: Board.cpp  Game.cpp  Piece.cpp  TetrisFacade.cpp
Tetris/test/Tetris_test/: BoardTest.cpp  CMakeLists.txt
Tetris/view/: ConsoleView.cpp  ConsoleView.h  keyboard.hpp  stringConvert.hpp
Tetris_GUI/: CMakeLists.txt  Tetris_GUI_fr_BE.ts  main.cpp  window.cpp  window.h  window.ui
Tetris_GUI/DP/: observable.cpp  observer.h
Tetris_GUI/model/headers/: Board.h  Game.h  GameType.h  TetrisFacade.h  TetrisInterface.h
Tetris_GUI/model/sources/: Bag.cpp  Board.cpp  Game.cpp  Level.cpp  Matrix.cpp  Piece.cpp  TetrisFacade.cpp
Tetris_GUI/view/headers/: ColoredSquare.h
Tetris_GUI/view/sources/: ColoredSquare.cpp
